                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 03-05-2005 added: basic authentication support to http reader. means authed rss feeds, authed internet playlists (thou the streams themself might not be authed). 
  - 03-05-2005 changed: Get/SeekPercentage now take floats.
  - 03-05-2005 added: Initial seek bar support - not currently implemented at the skin level.
  - 03-05-2005 changed: Increased PAPlayer output buffer size + added debug output if it drops down.
  - 03-05-2005 changed: moved cdda playback into paplayer
  - 02-05-2005 changed: music info scanner now only processes files matching the music extensions
  - 02-05-2005 updated: German language file
  - 02-05-2005 updated: Finnish language file (Thnx to jutski)
  - 02-05-2005 updated: Chinese (Traditional) language file (Thnx to dog099)
  - 02-05-2005 updated: Norwegian language file (Thnx to vnm)
  - 02-05-2005 updated: Korean language file (Thnx to akoako)
  - 01-05-2005 fixed: some more highlighting issues for dvdplayer
  - 01-05-2005 added: codec factory for paplayer
  - 01-05-2005 added: enabled pcm passthrough in paplayer
  - 01-05-2005 fixed: ac97 sound device has not counted total bytes added
  - 01-05-2005 fixed: pcm passthrough was not working using mplayer
  - 01-05-2005 fixed: some mp3's may hang when playing with paplayer
  - 29-04-2005 added: support for .tbn and folder.jpg images for music .pls and .strm files
  - 29-04-2005 fixed: Multichannel audio wasn't being downmixed properly when ac3 decoder was enabled in dash, but analog autput set in xbmc. Also caused sync problems
  - 28-04-2005 added: Initial Replaygain support to PAPlayer - only works from ID3v2 tags (non-standard) atm.