@@ -585,6 +585,12 @@ bundler xbelogo\saveimage.rdf -o xbelogo\saveimage.xbx
 				Name="infoTagReaders"
 				Filter="">
 				<File
+					RelativePath=".\xbmc\APEv2Tag.cpp">
+				</File>
+				<File
+					RelativePath=".\xbmc\APEv2Tag.h">
+				</File>
+				<File
 					RelativePath=".\xbmc\FlacTag.cpp">
 				</File>
 				<File
@@ -598,6 +604,12 @@ bundler xbelogo\saveimage.rdf -o xbelogo\saveimage.xbx
 				</File>
 				<File
 					RelativePath=".\xbmc\musicInfoTag.cpp">
+				</File>
+				<File
+					RelativePath=".\xbmc\MusicInfoTagLoaderApe.cpp">
+				</File>
+				<File
+					RelativePath=".\xbmc\MusicInfoTagLoaderApe.h">
 				</File>
 				<File
 					RelativePath=".\xbmc\MusicInfoTagLoaderCDDA.cpp">
@@ -2035,10 +2047,10 @@ bundler xbelogo\saveimage.rdf -o xbelogo\saveimage.xbx
 					RelativePath=".\xbmc\cores\sidplayer\audio\AudioDrv.h">
 				</File>
 				<File
-					RelativePath=".\xbmc\cores\sidplayer\audio\config.h">
+					RelativePath=".\xbmc\cores\sidplayer\config.h">
 				</File>
 				<File
-					RelativePath=".\xbmc\cores\sidplayer\config.h">
+					RelativePath=".\xbmc\cores\sidplayer\audio\config.h">
 				</File>
 				<File
 					RelativePath=".\xbmc\cores\sidplayer\IniConfig.cpp">
