@@ -28,6 +28,8 @@ using namespace MUSIC_GRABBER;
 using namespace DIRECTORY;
 using namespace PLAYLIST;
 
+#define APE_DLL "Q:\\system\\players\\PAPlayer\\MACDll.dll"
+
 int CGUIWindowMusicBase::m_nTempPlayListWindow = 0;
 CStdString CGUIWindowMusicBase::m_strTempPlayListDirectory = "";
 
@@ -243,6 +245,7 @@ bool CGUIWindowMusicBase::OnMessage(CGUIMessage& message)
       g_musicDatabase.Close();
       CSectionLoader::Unload("LIBID3");
       CSectionLoader::Unload("LIBMP4");
+      CSectionLoader::UnloadDLL(APE_DLL);
     }
     break;
 
@@ -253,6 +256,7 @@ bool CGUIWindowMusicBase::OnMessage(CGUIMessage& message)
 
       CSectionLoader::Load("LIBID3");
       CSectionLoader::Load("LIBMP4");
+      CSectionLoader::LoadDLL(APE_DLL);
 
       g_musicDatabase.Open();
 
