@@ -11,6 +11,8 @@
 using namespace MUSIC_INFO;
 using namespace DIRECTORY;
 
+#define APE_DLL "Q:\\system\\players\\PAPlayer\\MACDll.dll"
+
 CMusicInfoScanner::CMusicInfoScanner()
 {
   m_bRunning = false;
@@ -51,6 +53,7 @@ void CMusicInfoScanner::Process()
     // Preload section for ID3 cover art reading
     CSectionLoader::Load("CXIMAGE");
     CSectionLoader::Load("LIBMP4");
+    CSectionLoader::LoadDLL(APE_DLL);
 
     CUtil::ThumbCacheClear();
     g_directoryCache.InitMusicThumbCache();
@@ -114,6 +117,7 @@ void CMusicInfoScanner::Process()
 
     CSectionLoader::Unload("CXIMAGE");
     CSectionLoader::Unload("LIBMP4");
+    CSectionLoader::UnloadDLL(APE_DLL);
 
     CUtil::ThumbCacheClear();
     g_directoryCache.ClearMusicThumbCache();
